add several feature and security
