# service/validate.go
@@ -35,6 +35,28 @@ func ValidateStructProduct(data *dto.Product, response map[string]interface{}) e
 	return nil
 }
 
+func ValidateStructRegister(data *dto.RegisterUser, response map[string]interface{}) error {
+	trans := validation.TranslatorIDN()
+	validate := validator.New()
+	validation.RegisterCustomValidationsProduct(validate, trans)
+
+	if err := validate.Struct(data); err != nil {
+		var errsMessage []map[string]string
+		for _, err := range err.(validator.ValidationErrors) {
+			errField := err.StructField()
+			errTranslate := err.Translate(trans)
+			errs := map[string]string{
+				errField: errTranslate,
+			}
+			errsMessage = append(errsMessage, errs)
+		}
+		response["ErrorField"] = errsMessage
+		return err
+	}
+
+	return nil
+}
+
 func ValidateFileExtention(fileHeader *multipart.FileHeader) (string, error) {
 	ext := filepath.Ext(fileHeader.Filename) // extention file image
 	if ext != ".jpg" && ext != ".png" && ext != ".gift" {
@@ -47,5 +69,19 @@ func ValidateFileSize(fileHeader *multipart.FileHeader) error {
 	if fileHeader.Size > 2000000 {
 		return errors.New("file to large, max size file 2mb")
 	}
+	return nil
+}
+
+func ValidateLoginUser(email string, password string, response *map[string]string) error {
+	if email == "" {
+		(*response)["email"] = "email tidak boleh kosong"
+	} else if password == "" {
+		(*response)["password"] = "password tidak boleh kosong"
+	}
+
+	if len(*response) > 0 {
+		return errors.New("Validation Login User Error")
+	}
+
 	return nil
 }
